@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-25T02:01:41Z",
+  "timestamp" : "2022-08-25T08:25:32Z",
   "count_outdated" : 2366,
   "uniques_outdated" : 556,
-  "count" : 2386,
-  "uniques" : 570,
+  "count" : 2387,
+  "uniques" : 571,
   "clones" : [
     {
       "timestamp": "2022-08-14T00:00:00Z",
@@ -53,6 +53,13 @@
       "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-08-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
