@@ -1,5 +1,5 @@
 {
-  "count": 20,
+  "count": 21,
   "uniques": 10,
   "clones": [
     {
@@ -36,6 +36,11 @@
       "timestamp": "2022-08-24T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-08-25T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
